# load-balancer-cli

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  conductor.json  phase1_metrics_report.md
.config/: nextest.toml
benches/: engine_bench.rs  engine_queue_bench.rs  selection_bench.rs
src/: algorithms.rs  cli.rs  config.rs  engine.rs  error.rs  events.rs  lib.rs  main.rs  models.rs  output.rs  sim.rs  state.rs
src/algorithms/: least_connections.rs  least_response_time.rs  mod.rs  round_robin.rs  weighted_round_robin.rs
tests/: cli_errors.rs  cli_smoke.rs  cli_subcommands.rs  config_cli.rs
