[package]
name = "load-balancer-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "load-balancer-cli"
path = "src/bin/load-balancer.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.test]
opt-level = 0
debug = true
