[package]
name = "lb-sim"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lb-sim"
path = "src/bin/load-balancer.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.test]
opt-level = 0
debug = true

[profile.bench]
debug = true

[[bench]]
name = "engine_bench"
harness = false

[[bench]]
name = "selection_bench"
harness = false

[[bench]]
name = "engine_queue_bench"
harness = false
